`Eco cosmetics landing`

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
 @import "utils";
-@import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./block/about.scss";
+@import "./block/add-to-bag.scss";
+@import "./block/button.scss";
+@import "./block/confirmation.scss";
+@import "./block/contact.scss";
+@import "./block/container.scss";
+@import "./block/footer.scss";
+@import "./block/form.scss";
+@import "./block/grid.scss";
+@import "./block/header.scss";
+@import "./block/icon.scss";
+@import "./block/logo.scss";
+@import "./block/menu.scss";
+@import "./block/nav.scss";
+@import "./block/notate.scss";
+@import "./block/page.scss";
+@import "./block/payment.scss";
+@import "./block/power.scss";
+@import "./block/section-left.scss";
+@import "./block/shiping.scss";
+@import "./block/shop.scss";
+@import "./block/slider.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
