--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,9 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%icon {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
